hetzner/videos/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: 'postgres:16.3'
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 20m
              memory: 200M
            limits:
              memory: 200M          
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-pvc
