hetzner/videos/sm-json-data-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-json-data-updater
  labels:
    app: sm-json-data-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-json-data-updater
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: sm-json-data-updater
    spec:
      containers:
      - name: sm-json-data-updater
        image: docker.io/bkerby/map-rando-videos:main
        imagePullPolicy: Always
        command: ["/app/sm-json-data-updater"]
        resources:
          requests:
            cpu: 20m
            memory: 100M
          limits:
            memory: 100M
