hetzner/videos/videos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videos
spec:
  selector:
    app: videos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
