hetzner/videos/sm-json-data-updater-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sm-json-data-updater-mw
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /sm-json-data-updater

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-json-data-updater-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-sm-json-data-updater-mw@kubernetescrd
    traefik.ingress.kubernetes.io/priority: "100"
spec:
  tls:
  - hosts:
    - videos.maprando.com
    secretName: maprando-com-tls
  rules:
  - host: videos.maprando.com
    http:
      paths:
      - pathType: Prefix
        path: "/sm-json-data-updater"
        backend:
          service:
            name: sm-json-data-updater
            port:
              number: 8082
